[package]
name = "video-streaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats = "0.18.0"
rav1e = "0.5.1"
serde = "1.0.136"
base64 = "0.13.0"
serde_json = "1.0"
image = "0.23.14"

[dependencies.nokhwa]
version = "0.9.4"
features = ["input-v4l"]