[package]
name = "video-streaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
base64 = "0.13.0"
bus = "2.2.3"
env_logger = "0.9.0"
futures-util = "0.3"
image = "0.23.14"
log = "0.4.14"
nokhwa = { version = "0.9.4", features = ["input-v4l"]}
rav1e = "0.5.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
tensorflow = "0.17.0"
tokio = { version = "1.17.0", features = ["full"] }
warp = "0.3"
